--- a/fangzhan  最初版/2a.html
+++ b/fangzhan  最初版/2a.html
@@ -8,27 +8,30 @@
     <link type="text/css" rel="stylesheet" href="2a.css">
   </head>
   
-  <body>
-    <h1>THE VEHICLES</h1>
-    <h2>DRAGON</h2>
-    <h3>
-      The Dragon spacecraft is capable of carrying up to 7
-      passengers to and from Earth orbit and beyong. It is 
-      the only spacecraft currently flying that is capable of returning
-      significant amounts of cargo to Earth,and is the capable 
-      and is the first private spacecraft to take humans to the space station.
-    </h3>
-    <h4>
-      LEARN MORE
-    </h4>  
-    <h1>STARSHIP</h1>
-    <img class="1" src="images/starship.webp" alt="starship">
-    <h2>
-      Starship is the fully reusable spacecraft and second stage of the 
-      Starship system. The vehicle offers an integrated payload section and 
-      is capable of carrying passengers and cargo to Earth orbit, planetary 
-      destinations,and between destinations on Earth.
-    </h2>
-    <h3>LEARN MORE</h3>
-  </body>
+      <div class="Home-up">
+        <div class="Home-up-title">
+            <h1>THE VEHICLES</h1>
+        </div>
+        <div class="Home-up-left">
+            <div class="Home-up-left-title">
+                <h1 style="color: white;position: relative;top: 20%;">DRAGON</h1>
+                <p style="color: white; position: relative;top: 30%;">The Dragon spacecraft is capable of carrying up to 7 passengers to and from Earth orbit and beyond. It is the only spacecraft currently flying that is capable of returning significant amounts of cargo to Earth, and is the first private spacecraft to take humans to the space station.</p>
+            </div>
+            <span style="transition: all 1s;cursor: pointer; color: white;width: 300px;height: 50px;background-color: black;display: inline-block;position: relative;top: 20%;left: 8%;border: 5px solid white;font-size: 30px;text-align: center;line-height: 50px;" id="span-up">Learn More</span>
+        </div>
+        <div class="Home-up-right">
+            <video src="../fangzhan  最初版/images/dragon-comp.mp4" controls style="width: 90%;height: 90%;object-fit: contain;position: absolute;left: 10%; top: 25%;"loop playsinline muted></video>
+        </div>
+    </div>
+    <div class="Home-jet">
+        <div class="Home-img-left">
+            <img src="../static/img/fc.jpg" alt="">
+        </div>
+        <div class="Home-title-right">
+            <div class="Home-title-right-item">
+                <h1 style="color: white;font-size: 50px;position: relative;top: 20%;">STARSHIP</h1>
+                <p style="color: white; position: relative;top: 30%;">Starship is the fully reusable spacecraft and second stage of the Starship system. The vehicle offers an integrated payload section and is capable of carrying passengers and cargo to Earth orbit, planetary destinations, and between destinations on Earth.</p>
+                <span style="transition: all 1s;cursor: pointer; color: white;width: 300px;height: 100px;background-color: black;display: inline-block;position: relative;top: 65%;left: 3%;border: 5px solid white;font-size: 30px;text-align: center;line-height: 100px;" id="span-up">Learn More</span>
+
+
 </html>
